# q2-sapienns

./: .copier-answers.yml  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci-dev.yaml
conda-recipe/: meta.yaml
q2_sapienns/: __init__.py
