[project]
name = "q2-sapienns"
authors = [
    { name = "Greg Caporaso", email = "greg.caporaso@nau.edu" }
]
description = "None"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/gregcaporaso/q2-sapienns"
Repository = "https://github.com/caporaso-lab/q2-sapienns"

[project.entry-points.'qiime2.plugins']
"q2-sapienns" = "q2_sapienns.plugin_setup:plugin"

[build-system]
requires = [
    "setuptools",
    "versioningit",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.versioningit.vcs]
method = "git-archive"
describe-subst = "$Format:%(describe)$"
default-tag = "0.0.1"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.write]
file = "q2-sapienns/_version.py"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["q2_sapienns*"]

[tool.setuptools.package-data]
q2_sapienns = ["**/*"]
